Added error handling to HTTP Requests. Added creation and deletion of NachklausurRequest entities. Some renames.